summative.moria.Moria.scala.code
def Biscuit{
  
  while(getCouleurSol()!=Color.GREEN){
    retourne()
  	while(!estSurBiscuit){
      if(estFaceMur){
       droite()
       avance()
       gauche()
       avance()
        return
     }else{
  		avance()
 	 }
    }
    
 	 prendBiscuit()
 	 retourne()
 	 while((!estSurBiscuit) && (!getCouleurSol()!=Color.GREEN){
     
  		avance()
 	 	}
   
    recule()
	  poseBiscuit()
    recule()
	
}
}


while(getCouleurSol()!=Color.GREEN){
  Biscuit
}